polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_residues_with_duplicate_merged_functional_groups.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
description: residues
expression: out
---
  × failed to validate polymer chemistry file
  ╰─▶   × the functional group "Amino" has already been defined at "N-
      terminal"
        help: double-check for typos, or remove the duplicate functional group
      
   ╭─[test:3:9]
 2 │     AminoAcid {
 3 │         functional-group "Amino" at="N-terminal"
   ·         ────────────────────┬────────────────────
   ·                             ╰── first defined here
 4 │     }
 5 │ }
 6 │ AminoAcid "K" "Lysine" {
 7 │     composition "C6H14N2O2"
 8 │     functional-group "Amino" at="N-terminal"
   ·     ────────────────────┬────────────────────
   ·                         ╰── then again here
 9 │ }
   ╰────

