polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_residues_without_type_section.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
description: residues
expression: out
---
  × error parsing KDL

Error:   × child node `types` is required

